[gd_scene load_steps=8 format=2]

[ext_resource path="res://Code/Interface/CombatControls.gd" type="Script" id=1]
[ext_resource path="res://Code/Combat/TurnOrder.gd" type="Script" id=2]
[ext_resource path="res://Themes/old-default.tres" type="Theme" id=3]
[ext_resource path="res://Themes/f_basic.tres" type="DynamicFont" id=4]
[ext_resource path="res://Code/Combat/CombatManager.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "FadeAnim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Combat" type="Control"]
margin_left = 392.0
margin_top = 8.0
margin_right = 1208.0
margin_bottom = 896.0
theme = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="ScrollContainer" parent="."]
margin_left = 72.0
margin_top = 760.0
margin_right = 712.0
margin_bottom = 880.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="GridContainer" parent="Controls"]
margin_right = 640.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Controls/Controls"]
margin_right = 210.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "test1"

[node name="Button2" type="Button" parent="Controls/Controls"]
margin_left = 214.0
margin_right = 424.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "test2"

[node name="Button3" type="Button" parent="Controls/Controls"]
margin_left = 428.0
margin_right = 638.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "test3"

[node name="Button4" type="Button" parent="Controls/Controls"]
margin_top = 33.0
margin_right = 210.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "test4"

[node name="Button5" type="Button" parent="Controls/Controls"]
margin_left = 214.0
margin_top = 33.0
margin_right = 424.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "test4"

[node name="Button6" type="Button" parent="Controls/Controls"]
margin_left = 428.0
margin_top = 33.0
margin_right = 638.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "test4"

[node name="Button7" type="Button" parent="Controls/Controls"]
margin_top = 66.0
margin_right = 210.0
margin_bottom = 95.0
size_flags_horizontal = 3
text = "test4"

[node name="TurnOrder" type="Control" parent="."]
margin_left = -64.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 184.0
mouse_filter = 1
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="TurnOrder"]
margin_top = 96.0
margin_right = 216.0
margin_bottom = 184.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TurnOrder"]
margin_right = 216.0
margin_bottom = 152.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Probs" type="Panel" parent="TurnOrder"]
visible = false
self_modulate = Color( 1, 1, 1, 0.5 )
margin_left = 224.0
margin_right = 440.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Units" type="Label" parent="TurnOrder/Probs"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 27.0

[node name="Probs" type="Label" parent="TurnOrder/Probs"]
margin_left = 96.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 27.0
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TurnOrder"]
margin_left = 8.0
margin_top = 32.0
margin_right = 208.0
margin_bottom = 120.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TurnOrder"]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 27.0
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnim" type="AnimationPlayer" parent="."]
anims/FadeAnim = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ManaLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 192.0
margin_right = 144.0
margin_bottom = 211.0
custom_fonts/font = ExtResource( 4 )
text = "1234567890"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -56.0
margin_top = 192.0
margin_right = 39.0
margin_bottom = 211.0
text = "Field mana:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="TurnOrder/Panel2" to="TurnOrder" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="TurnOrder/Panel2" to="TurnOrder" method="_on_Panel_mouse_exited"]
[connection signal="mouse_entered" from="TurnOrder/Panel" to="TurnOrder" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="TurnOrder/Panel" to="TurnOrder" method="_on_Panel_mouse_exited"]
